# myos

./: Cargo.toml  LICENSE  README.md  build-all.sh  build.rs  kernel8.img  linker-riscv64.ld  linker.ld
src/: main.rs
src/arch/: mod.rs
src/arch/aarch64/: boot.rs  boot.s  timer.rs
src/arch/riscv64/: boot.rs  timer.rs
src/drivers/: mod.rs  uart.rs
src/drivers/aarch64/: uart.rs
src/drivers/riscv64/: uart.rs
